--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "pymysql<2.0.0,>=1.1.1",
     "cryptography<41.0.0,>=40.0.2",
     "sqlalchemy[asyncio]<3.0.0,>=2.0.27",
-    "rapidfuzz<4.0.0,>=3.0.0",
+    "rapidfuzz>=3.0.0,<4.0.0",
     "psycopg[pool]<4.0.0,>=3.1.9",
     "pydantic[email]==2.9.*",
     "openai<2.0.0,>=1.11.0",
